*** empty log message ***

--- a/trunk/doc/refman/refman.tex
+++ b/trunk/doc/refman/refman.tex
@@ -95,7 +95,7 @@
    \VerbatimInput[%frame=single,
                   label=\fbox{#1},numbers=left,
                   %framesep=5mm,
-                  obeytabs=true,showtabs=true]{../../examples/#1}}
+                  obeytabs=true,showtabs=true]{../../examples/misc/#1}}
 
 \newcommand{\NB}{\textbf{NB: }}
 
@@ -120,7 +120,7 @@ Usage:  ./rz <options> [filenames]
   --help  Display this list of options
 \end{Verbatim}
 
-Input files have the extension \Verb|.thr| (by convention, not a requirement), and the 
+Input files have the extension \Verb|.thy| (by convention, not a requirement), and the 
 output file has the same name but with its extension replaced by \Verb|.mli|.
 
 \section{Input Syntax}
@@ -624,24 +624,24 @@ Terms can be of the following forms:
 
 \clearpage
 \section{Sample Inputs}
-\includeexample{nat.thr}
+\includeexample{nat.thy}
 
 \clearpage
-\includeexample{semilattice.thr}
+\includeexample{semilattice.thy}
 
 \clearpage
-\includeexample{kuratowski2.thr}
+\includeexample{kuratowski2.thy}
 Need to change brackets to parentheses
 
 \clearpage
-\includeexample{sums.thr}
-\includeexample{subset.thr}
+\includeexample{sums.thy}
+\includeexample{subset.thy}
 
 \clearpage
-\includeexample{field.thr}
+\includeexample{field.thy}
 
 \clearpage
-\includeexample{choice.thr}
+\includeexample{choice.thy}
 
 \section{Output}
 
